GET for permissions on assistants + swag_from
